--- a/styles.css
+++ b/styles.css
@@ -57,9 +57,13 @@ h1 {
 #texti{
     order: 1;
 }*/
+.grid__row:nth-of-type(2){
+    flex-direction:column-reverse; 
+}
+/*
 .grid:first-of-type .grid__row:nth-of-type(2) .grid__col:first-of-type{
     order: 1;
-}
+}*/
 
 .grid__row{
     display: flex;
@@ -93,9 +97,12 @@ h1 {
     }
     #texti{
         order: 2;
-    }*/
+    }
     .grid:first-of-type .grid__row:nth-of-type(2) .grid__col:first-of-type{
         order: 0;
+    }*/
+    .grid__row:nth-of-type(2){
+        flex-direction:row; 
     }
     .grid__row {
         display: flex;
